# Openai_Chatbot

./: pyproject.toml
src/aiagent/: .env  chatbot.py
